Fix alignment of icons on right-nav
The padding was added back when we wanted to use it to
separate the icons on mobile (which is now hidden anyways).

--- a/style.css
+++ b/style.css
@@ -139,7 +139,6 @@ body {
 }
 .nav-icon {
   font-size: 30px;
-  padding: 5px;
 }
 
 .nav-icon a {
